src/objects/Contact/fields/Patch_Surrender_Required__c.field-meta.xml
<CustomField>
    <fullName>Patch_Surrender_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if member must surrender CVMA patch per Appendix C Section 8 Administrative Hold requirements or Section 13 disciplinary actions</description>
    <inlineHelpText>Check if this member is required to surrender their CVMA patch during Administrative Hold or as result of disciplinary action per Appendix C.</inlineHelpText>
    <label>Patch Surrender Required</label>
    <type>Checkbox</type>
</CustomField>