src/objects/Contact/fields/POC_Assigned__c.field-meta.xml
<CustomField>
    <fullName>POC_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Point of Contact assigned to manage this investigation per Appendix C Section 12 - ensures proper case management and documentation</description>
    <inlineHelpText>Select the CEB officer assigned as POC for this investigation. POC manages documentation and committee coordination.</inlineHelpText>
    <label>Investigation POC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.CEB_Position__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Investigation POC must be a current CEB officer per Appendix C procedures</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investigations Managed (POC)</relationshipLabel>
    <relationshipName>Investigations_Managed_POC</relationshipName>
    <type>Lookup</type>
</CustomField>