src/objects/Contact/fields/Previous_CEB_Positions__c.field-meta.xml
<CustomField>
    <fullName>Previous_CEB_Positions__c</fullName>
    <description>Historical record of all CEB positions held by this member for term limit validation and succession planning per National Bylaws Article XIV.03.b</description>
    <inlineHelpText>Automatically tracks all previous CEB positions with dates served. Format: Position | Start Date - End Date (one per line)</inlineHelpText>
    <label>Previous CEB Positions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>