src/objects/Contact/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>Date when military service ended</description>
    <inlineHelpText>Enter the date when military service ended (leave blank if still serving)</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>