src/objects/Contact/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>Date when military service began</description>
    <inlineHelpText>Enter the date when military service began</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>