src/objects/Contact/fields/Social_Media_Access_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Access_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if member's CVMA social media posting privileges have been suspended per Appendix C Section 8.e restrictions</description>
    <inlineHelpText>Check to suspend this member's social media posting privileges on official CVMA platforms during disciplinary proceedings.</inlineHelpText>
    <label>Social Media Access Suspended</label>
    <type>Checkbox</type>
</CustomField>