src/objects/Contact/fields/Term_Limit_Status__c.field-meta.xml
<CustomField>
    <fullName>Term_Limit_Status__c</fullName>
    <description>Tracks member's eligibility for CEB positions based on term limits and National Bylaws compliance requirements</description>
    <inlineHelpText>Indicates if this member is eligible for CEB positions, term limited, or requires review per National Bylaws</inlineHelpText>
    <label>Term Limit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
                <default>true</default>
                <label>Eligible</label>
            </value>
            <value>
                <fullName>Currently Serving</fullName>
            </value>
            <value>
                <fullName>Term Limited</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>