src/objects/Contact/fields/Website_Access_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Website_Access_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if member's CVMA website access has been suspended per Appendix C Section 8.e system access restrictions during Administrative Hold or disciplinary action</description>
    <inlineHelpText>Check to suspend this member's access to CVMA website systems during Administrative Hold or disciplinary proceedings per Appendix C.</inlineHelpText>
    <label>Website Access Suspended</label>
    <type>Checkbox</type>
</CustomField>