src/objects/Contact/validationRules/CEB_Position_Member_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CEB_Position_Member_Type_Validation</fullName>
    <active>true</active>
    <description>Enforce CVMA Bylaws Article XIV.03.b requirement: Only Full Members can hold CEB positions. Support and Auxiliary members cannot hold executive positions.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(CEB_Position__c))),
    OR(
        NOT(ISPICKVAL(Level__c, 'Full Member')),
        ISPICKVAL(Level__c, 'Medically Exempt Life Member')
    )
)</errorConditionFormula>
    <errorDisplayField>CEB_Position__c</errorDisplayField>
    <errorMessage>CVMA Bylaws Violation: Only Full Members can hold CEB positions. Support, Auxiliary, and Medically Exempt Life Members are not eligible per National Bylaws Article XIV.03.b and Revision V 3.01(d).</errorMessage>
</ValidationRule>