src/objects/Contact/validationRules/CVMA_Membership_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CVMA_Membership_Format_Validation</fullName>
    <active>true</active>
    <description>Validates Membership ID format: FM/SUP/AUX + 1-5 digits, max 8 characters</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Membership_Id__c)),
  NOT(ISBLANK(TEXT(Level__c))),
  OR(
    LEN(Membership_Id__c) &gt; 8,
    AND(
      TEXT(Level__c) = &quot;Full Member&quot;,
      OR(
        LEN(Membership_Id__c) &lt; 3,
        NOT(REGEX(Membership_Id__c, &quot;^[A-Za-z]{2}[0-9]{1,5}$&quot;))
      )
    ),
    AND(
      TEXT(Level__c) = &quot;Support Member&quot;,
      OR(
        LEN(Membership_Id__c) &lt; 4,
        NOT(REGEX(Membership_Id__c, &quot;^[A-Za-z]{3}[0-9]{1,5}$&quot;))
      )
    ),
    AND(
      TEXT(Level__c) = &quot;Auxiliary Member&quot;,
      OR(
        LEN(Membership_Id__c) &lt; 4,
        NOT(REGEX(Membership_Id__c, &quot;^[A-Za-z]{3}[0-9]{1,5}$&quot;))
      )
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Membership_Id__c</errorDisplayField>
    <errorMessage>Invalid format. Use: FM+1-5 digits (3-8 chars), SUP+1-5 digits (4-8 chars), or AUX+1-5 digits (4-8 chars)</errorMessage>
</ValidationRule>