src/objects/Contact/listViews/Org_Contact_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Contact_Hierarchy</fullName>
    <columns>Road_Name__c</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Contact_Hierarchy</label>
</ListView>